---
source: tests/lexer.rs
description: "get http://localhost { header \"Authorization\" \"Bearer token\" }"
expression: "lexer.into_iter().collect::<Vec<rested::lexer::Token>>()"
---
[
    Get("get") at Location { line: 0, col: 0 },
    Url("http://localhost") at Location { line: 0, col: 4 },
    LBracket("{") at Location { line: 0, col: 21 },
    Header("header") at Location { line: 0, col: 23 },
    StringLiteral("\"Authorization\"") at Location { line: 0, col: 30 },
    StringLiteral("\"Bearer token\"") at Location { line: 0, col: 46 },
    RBracket("}") at Location { line: 0, col: 61 },
]
